--- a/lib/requirejs/rails/rjs_driver.js.erb
+++ b/lib/requirejs/rails/rjs_driver.js.erb
@@ -2,13 +2,19 @@
 var requirejs = require('<%= rjs_path %>'),
   //Set up basic config, include config that is
   //common to all the optimize() calls.
-  basConfig = <%= JSON.pretty_generate(build_config.reject {|k,v| k == 'modules'}) %>;
+  baseConfig = <%=
+    modifiedHash = build_config.select {|k, _| k != "modules"}
+    pathsHash = modifiedHash["paths"]
+    modifiedHash["paths"] = pathsHash.select {|_, v| !v.is_a?(Array)} if !pathsHash.nil?
+
+    JSON.pretty_generate(modifiedHash)
+  %>;
 
 // Function used to mix in baseConfig to a new config target
 function mix(target) {
-  for (var prop in basConfig) {
-    if (basConfig.hasOwnProperty(prop)) {
-      target[prop] = basConfig[prop];
+  for (var prop in baseConfig) {
+    if (baseConfig.hasOwnProperty(prop)) {
+      target[prop] = baseConfig[prop];
     }
   }
   return target;
